django-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: secu2
    app.kubernetes.io/component: secu2
    app.kubernetes.io/instance: secu2
    app.kubernetes.io/name: secu2
    app.kubernetes.io/part-of: secu2-app
    app.openshift.io/runtime-version: v1
  name: secu2
spec:
  clusterIP: 172.30.198.79
  clusterIPs:
  - 172.30.198.79
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: secu2
    deploymentconfig: secu2
  sessionAffinity: None
  type: ClusterIP
