django-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: secu2
    app.kubernetes.io/component: secu2
    app.kubernetes.io/instance: secu2
    app.kubernetes.io/name: secu2
    app.kubernetes.io/part-of: secu2-app
    app.openshift.io/runtime-version: v1
  name: secu2
  namespace: secu-django
spec:
  host: secu2-b-django-test.apps.ocp4.jimbarlow.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: secu2
    weight: 100
  wildcardPolicy: None
